<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.haknazarovfarkhod.supervisersAssistant.Fragments.ProductFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productTitleTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/OrderTitleTextViewText"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAlignment="viewStart"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productUnitOfMeasurementTitle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/productUnitOfMeasurementTitleText"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/productUnitOfMeasurement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productMinimumQuantityTitle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/productMinQuantityTitleText"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/productMinimumQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productArticleTitle"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/productArticleTitleText" />

            <EditText
                android:id="@+id/productArticle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/productOKButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="OK" />

            <Button
                android:id="@+id/productCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
